# mise-en-gitlab

./: .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
src/mise_en_gitlab/: __about__.py  __init__.py  __main__.py  core.py  logging.py
src/mise_en_gitlab/cli/: __init__.py
tests/: __init__.py  test_generate.py  test_gitlab_features.py  test_one.py
